--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -293,3 +293,59 @@
   top: 14px;
   width: 185px;
 }
+
+
+/* Slider part css*/
+.XpertXpert {
+  color: slate-500;
+  font-size: 14px; 
+}
+
+.Title{
+width: 364px;
+height: 59px;
+flex-shrink: 0;
+}
+
+.UserComment3 {
+  position: absolute;
+  width: 220px;
+}
+
+.Rectangle9218 {
+  width: 433px;
+  height: 432px;
+  left: 0;
+  top: 0;
+  position: absolute;
+  background-color: #DEE7FF80;
+  backdrop-filter: blur(3px); /* 블러 효과를 원하면 추가 */
+  border-radius: 10px;
+  box-shadow: 2px 5px 10px 3px  #DEE7FF80;
+}
+/*이용 후기 subtitle*/
+.subtitle {
+  width: 432px;
+  left: 110px;
+  top: 70px;
+  position: absolute;
+  color: #4b5563; /* text-slate-500 */
+  opacity: 0.8; /* text-opacity-80 */
+  font-size: 14px; /* text-base */
+  font-weight: bold; /* font-bold */
+}
+
+.text{
+  width: 432px;
+  left: 20px;
+  top: 137px;
+  right: 20px;
+  position: absolute;
+  color: #6b7280; /* text-stone-500 */
+  font-size: 14px; /* text-sm */
+  font-weight: 500; /* font-medium */
+}
+
+.link:hover {
+  text-decoration: underline; /* 밑줄 추가 */
+}
